# obs-plugintemplate

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  buildspec.json
.github/actions/build-plugin/: action.yaml
.github/actions/package-plugin/: action.yaml
.github/actions/run-clang-format/: action.yaml
.github/actions/run-cmake-format/: action.yaml
.github/actions/setup-macos-codesigning/: action.yaml
.github/scripts/: .build.zsh  .package.zsh  .run-format.zsh  Build-Windows.ps1  Package-Windows.ps1  build-linux  build-macos  build-ubuntu  package-linux
.github/scripts/utils.pwsh/: Install-BuildDependencies.ps1
.github/scripts/utils.zsh/: check_linux  check_macos  check_packages  setup_ccache  setup_linux
.github/workflows/: build-project.yaml  check-format.yaml  dispatch.yaml  pr-pull.yaml  push.yaml  scheduled.yaml
build-aux/: .run-format.zsh
cmake/common/: bootstrap.cmake  buildnumber.cmake  buildspec_common.cmake  ccache.cmake  compiler_common.cmake  helpers_common.cmake  osconfig.cmake
cmake/linux/: compilerconfig.cmake  defaults.cmake  helpers.cmake  simd.cmake
cmake/macos/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  simd.cmake  xcode.cmake
cmake/macos/resources/: create-package.cmake.in  installer-macos.pkgproj.in
cmake/windows/: buildspec.cmake  compilerconfig.cmake  defaults.cmake  helpers.cmake  simd.cmake
cmake/windows/resources/: installer-Windows.iss.in
src/: plugin-main.c
